# Data-Insights-Dashboard

./: README.md  docker-compose.yml  docker_compose.yml  requirements.txt  setup.py
.github/workflows/: CI_CD.yml
conf/base/: catalog.yml  credentials.yml
dashboard/: README.md  pyproject.toml
dashboard/src/dashboard/: __init__.py  __main__.py  settings.py
dashboard/tests/: test_run.py
dashboard/tests/pipelines/data_science/: test_pipeline.py
data-insights/: README.md  pyproject.toml
data-insights/conf/base/: catalog.yml
data-insights/src/data_insights/: __init__.py  __main__.py  pipeline_registry.py  settings.py
data-insights/src/data_insights/pipelines/data_processing/: nodes.py  pipeline.py
data-insights/tests/: test_run.py
data-insights/tests/pipelines/data_science/: test_pipeline.py
myvenv/: pyvenv.cfg
myvenv/Scripts/: activate  activate.bat  pygrun
notebooks/: apollo_reviews_rating_distribution.html  banks_ad_performance_over_time.html  eda.ipynb  telegram_ad_data.html  telegram_ad_performance.html
scripts/docker/: setup_dashboard.sh  setupd_dashboard.sh
scripts/kedro/: data_loading.py
scripts/migration/: migrate_dashboards.sh  migrate_database.sh
src/dashboards/: __init__.py  ad_performance.py  dashboard.py  dashboard_utils.py  play_store_reviews.py  telegram_subscription_growth.py  tikvah_ad_impact.py
src/preprocessing/: preprocess_telegram_data.py
src/scraping/: scrape_telegram_data.py
